export const snapshot = {};

snapshot[`Project Delete Command - Help Text 1`] = `
stdout:
"
Usage: delete <projectId>

Description:

  Delete (trash) a Linear project

Options:

  -h, --help         - Show this help.                                    
  -i, --interactive  - Enable interactive confirmation                    
  -y, --yes          - Skip confirmation prompt                           
  -f, --force        - Deprecated alias for --yes                         
  --dry-run          - Preview the deletion without mutating the project  

Examples:

  Preview deleting a project         linear project delete auth-refresh --dry-run
  Delete a project without prompting linear project delete auth-refresh --yes    

"
stderr:
""
`;

snapshot[`Project Delete Command - With Yes Flag 1`] = `
stdout:
"✓ Deleted project: Deleted Project
"
stderr:
""
`;

snapshot[`Project Delete Command - Legacy Force Alias 1`] = `
stdout:
"✓ Deleted project: Deleted Project
"
stderr:
""
`;

snapshot[`Project Delete Command - Dry Run 1`] = `
stdout:
"Dry run: Would delete project 550e8400-e29b-41d4-a716-446655440099
Project: 550e8400-e29b-41d4-a716-446655440099
Resolved ID: 550e8400-e29b-41d4-a716-446655440099
"
stderr:
""
`;

snapshot[`Project Delete Command - Requires Explicit Confirmation Mode 1`] = `
stdout:
""
stderr:
"✗ Failed to delete project: Interactive confirmation required
  v3 defaults to non-interactive confirmation. Use --yes for automation, or pass --profile human-debug --interactive to confirm in a terminal.
"
`;
